--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -1,3 +1,43 @@
 .nowrap {
 	white-space: nowrap;
 }
+
+.scenes {
+	background: rgb(51, 51, 51);
+	height: 500px;
+	width: 100%;
+}
+
+.scene {
+	border: 1px solid rgb(50,50,50);
+	box-shadow: 0 0 5px rgba(0,0,0, 0.5);
+	border-radius: 5px;
+	padding: 0.5em;
+	background: rgb(255, 255, 255);
+	width: 200px;
+}
+
+.scene h4 {
+	border-bottom: 1px solid grey;
+	overflow: hidden;
+	margin-top: 0;
+}
+
+.scene-items {
+	margin-bottom: 0;
+}
+
+.scene-items .item-icon {
+	text-align: center;
+}
+.scene-items .item-label {
+	margin: 0;
+}
+
+.scene-items .scene-item {
+	height: 55px;
+	width: 75px;
+	overflow: hidden;
+	text-align: center;
+	white-space: nowrap;
+}
