Wire up top menus, make scene items draggable

--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -41,3 +41,8 @@
 	text-align: center;
 	white-space: nowrap;
 }
+
+.game-item-info h4 {
+	padding-bottom: 0.25em;
+	border-bottom: 1px solid grey;
+}
