--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -3,12 +3,33 @@
 }
 
 .scenes {
+	position: absolute;
+	z-index: 1;
+
+	top: 0;
+	left: 0;
 	background: rgb(51, 51, 51);
 	height: 500px;
 	width: 100%;
 }
 
+.scenes-overlay {
+	position: absolute;
+	z-index: 20;
+
+	top: 0;
+	left: 0;
+	height: 500px;
+	width: 100%;
+	pointer-events: none;
+	/*background: rgba(255,0,255,0.5);*/
+}
+
 .scene {
+	position: relative;
+	z-index: 10;
+
+	float: left;
 	border: 1px solid rgb(50,50,50);
 	box-shadow: 0 0 5px rgba(0,0,0, 0.5);
 	border-radius: 5px;
@@ -35,6 +56,9 @@
 }
 
 .scene-items .scene-item {
+	position: relative;
+	z-index: 40;
+
 	height: 55px;
 	width: 75px;
 	overflow: hidden;
