Moving to less, fixing stacking context issue

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -3,7 +3,7 @@
 }
 
 .scenes {
-	position: absolute;
+	/*position: absolute;*/
 	z-index: 1;
 
 	top: 0;
@@ -69,4 +69,11 @@
 .game-item-info h4 {
 	padding-bottom: 0.25em;
 	border-bottom: 1px solid grey;
+}
+
+.new-scene {
+	position: absolute;
+	top: 0;
+	right: 0;
+	z-index: 2;
 }
