--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -72,7 +72,7 @@
   padding-bottom: 0.25em;
   border-bottom: 1px solid grey;
 }
-.new-scene {
+.new-scene-dropdown {
   position: absolute;
   top: 0;
   right: 0;
