--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -40,11 +40,21 @@
 	background: rgb(255, 255, 255);
 	width: 200px;
 
-	h4 {
+	.title {
 		border-bottom: 1px solid grey;
 		overflow: hidden;
 		margin-top: 0;
+		
+		float: left;
 	}
+
+	.new-item-dropdown {
+		float: right;
+	}
+}
+
+.new-scene, .new-item {
+	font-size: 125%;
 }
 
 .scene-items {
