--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -3,23 +3,24 @@
 }
 .absolute {
   position: absolute;
-  top: 0;
-  left: 0;
+  margin-top: 0;
+  margin-left: 0;
   height: 500px;
   width: 100%;
 }
 .scenes {
   position: absolute;
-  top: 0;
-  left: 0;
+  margin-top: 0;
+  margin-left: 0;
   height: 500px;
   width: 100%;
   z-index: 2;
+  padding: 2em;
 }
 .scenes-overlay {
   position: absolute;
-  top: 0;
-  left: 0;
+  margin-top: 0;
+  margin-left: 0;
   height: 500px;
   width: 100%;
   z-index: 20;
@@ -28,8 +29,8 @@
 }
 .scene-background {
   position: absolute;
-  top: 0;
-  left: 0;
+  margin-top: 0;
+  margin-left: 0;
   height: 500px;
   width: 100%;
   background: #333333;
@@ -51,7 +52,7 @@
   margin-top: 0;
   float: left;
 }
-.scene .new-item-dropdown {
+.scene .new-item-button {
   float: right;
 }
 .new-scene,
@@ -80,9 +81,7 @@
   padding-bottom: 0.25em;
   border-bottom: 1px solid grey;
 }
-.new-scene-dropdown {
-  position: absolute;
-  top: 0;
-  right: 0;
+.new-scene-button {
+  float: right;
   z-index: 2;
 }
