--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -4,8 +4,8 @@
 
 .absolute {
 	position: absolute;
-	top: 0;
-	left: 0;
+	margin-top: 0;
+	margin-left: 0;
 	height: 500px;
 	width: 100%;
 }
@@ -13,6 +13,7 @@
 .scenes {
 	.absolute;
 	z-index: 2;
+	padding: 2em;
 }
 
 .scenes-overlay {
@@ -48,7 +49,7 @@
 		float: left;
 	}
 
-	.new-item-dropdown {
+	.new-item-button {
 		float: right;
 	}
 }
@@ -85,9 +86,7 @@
 	border-bottom: 1px solid grey;
 }
 
-.new-scene-dropdown {
-	position: absolute;
-	top: 0;
-	right: 0;
+.new-scene-button {
+	float: right;
 	z-index: 2;
 }
