--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -45,11 +45,11 @@
 	background: rgb(255, 255, 255);
 	width: 200px;
 
-	.title {
+	h4.name {
 		border-bottom: 1px solid grey;
 		overflow: hidden;
 		margin-top: 0;
-		
+
 		float: left;
 	}
 
