More v2 fixes for scene/game. * Close scene on delete * Fix scene not getting ID on save. * Check for fault codes on collection. * Add xray view.

--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -1,3 +1,11 @@
+.x-ray-backbone-view {
+  border: 1px solid blue;
+  margin: 2px;
+  overflow: hidden;
+}
+.x-ray-backbone-view .x-ray-view-template-name {
+  color: red;
+}
 .nowrap {
   white-space: nowrap;
 }
