--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -96,3 +96,12 @@
 	float: right;
 	z-index: 2;
 }
+
+.scene-info {
+	.scene-id {
+		visibility: hidden;
+	}
+	h4:hover .scene-id {
+		visibility: visible;
+	}
+}
