--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -101,11 +101,9 @@
 	z-index: 2;
 }
 
-.scene-info {
-	.scene-id {
-		visibility: hidden;
-	}
-	h4:hover .scene-id {
-		visibility: visible;
-	}
+.object-id {
+	visibility: hidden;
+}
+h4:hover .object-id {
+	visibility: visible;
 }
