--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -59,16 +59,13 @@
 		float: left;
 	}
 
-	.new-item-button {
+	.new-trigger-button {
 		float: right;
 	}
 }
 
-.new-scene, .new-item {
-	font-size: 125%;
-}
 
-.scene-items {
+.scene-triggers {
 	margin-bottom: 0;
 
 	.item-icon {
@@ -79,7 +76,7 @@
 		margin: 0;
 	}
 
-	.scene-item {
+	.scene-trigger {
 		position: relative;
 		z-index: 40;
 
