--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -23,6 +23,7 @@ a {
 .aris-logo {
 	img {
 		height: 40px;
+		margin: 5px 10px;
 	}
 }
 
@@ -30,7 +31,7 @@ a {
 	padding-left: 1em;
 }
 
-.scenes {
+#main .scenes {
 	.absolute;
 	z-index: 2;
 	padding: 2em;
