switch tables to lists, narrow field width

--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -9,8 +9,14 @@
 .clear {
   clear: both;
 }
+/* Anchors with no hrefs */
 a {
   cursor: pointer;
+}
+/* Active bootstrap list item as a button */
+a.list-group-item.active:hover {
+  background-color: #3276b1;
+  border-color: #285e8e;
 }
 .nowrap {
   white-space: nowrap;
@@ -110,4 +116,9 @@ h4:hover .object-id {
 }
 .trigger-types input {
   display: none;
+}
+.shrink-center {
+  width: 430px;
+  margin-left: auto;
+  margin-right: auto;
 }
