--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -4,8 +4,15 @@
 	clear: both;
 }
 
+/* Anchors with no hrefs */
 a {
   cursor:pointer;
+}
+
+/* Active bootstrap list item as a button */
+a.list-group-item.active:hover {
+  background-color: #3276b1;
+  border-color: #285e8e;
 }
 
 .nowrap {
@@ -118,4 +125,10 @@ h4:hover .object-id {
 
 .trigger-types input {
 	display: none;
+}
+
+.shrink-center {
+	width: 430px;
+	margin-left: auto;
+	margin-right: auto;
 }
