--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -1,15 +1,13 @@
 @import "xray-debug";
 
-.clear {
-	clear: both;
-}
-
-/* Anchors with no hrefs */
+/* Cursor for anchors with no hrefs */
 a {
   cursor:pointer;
 }
 
+
 /* Active bootstrap list item as a button */
+
 a.list-group-item.active:hover {
   background-color: #3276b1;
   border-color: #285e8e;
@@ -38,10 +36,14 @@ a.list-group-item.active:hover {
 	padding-left: 1em;
 }
 
+
+/* Scene editor */
+
 #main .scenes {
 	.absolute;
 	z-index: 2;
 	padding: 2em;
+	background: #afafaf;
 }
 
 .scenes-overlay {
@@ -49,39 +51,24 @@ a.list-group-item.active:hover {
 	z-index: 20;
 
 	pointer-events: none;
-	/*background: rgba(255,0,255,0.5);*/
 }
 
-.scene-background {
-	.absolute;
-	background: rgb(51, 51, 51);
-}
-
-.scene {
-	position: relative;
-	z-index: 10;
-
+.scene-panel {
+	max-width: 300px;
 	float: left;
-	border: 1px solid rgb(50,50,50);
-	box-shadow: 0 0 5px rgba(0,0,0, 0.5);
-	border-radius: 5px;
-	padding: 0.5em;
-	background: rgb(255, 255, 255);
-	width: 200px;
 
-	h4.name {
-		border-bottom: 1px solid grey;
+	.scene-title {
+		max-width: 240px;
+		white-space: nowrap;
 		overflow: hidden;
-		margin-top: 0;
-
-		float: left;
+		font-size: 125%;
+		margin-right: 0.5em;
 	}
 
-	.new-trigger-button {
-		float: right;
+	.new-trigger {
+		padding-top: 0.25em;
 	}
 }
-
 
 .scene-triggers {
 	margin-bottom: 0;
@@ -96,7 +83,6 @@ a.list-group-item.active:hover {
 
 	.scene-trigger {
 		position: relative;
-		z-index: 40;
 
 		height: 55px;
 		width: 75px;
@@ -106,16 +92,13 @@ a.list-group-item.active:hover {
 	}
 }
 
-.game-item-info h4 {
-	padding-bottom: 0.25em;
-	border-bottom: 1px solid grey;
-}
-
 .new-scene-button {
 	float: right;
 	z-index: 2;
 }
 
+
+/* Hidden ID on editor heading */
 .object-id {
 	visibility: hidden;
 }
@@ -123,9 +106,15 @@ h4:hover .object-id {
 	visibility: visible;
 }
 
+
+/* Hide radio inputs */
+
 .trigger-types input {
 	display: none;
 }
+
+
+/* Narrow editor panels */
 
 .shrink-center {
 	width: 430px;
