--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -19,7 +19,8 @@ a.list-group-item.active:hover {
   white-space: nowrap;
 }
 .absolute {
-  position: absolute;
+  /* Disabled for demo */
+  /* position: absolute; */
   margin-top: 0;
   margin-left: 0;
   height: 100%;
@@ -29,6 +30,7 @@ a.list-group-item.active:hover {
   height: 40px;
   margin: 5px 10px;
 }
+/* Full height editor */
 html,
 body,
 .full-height {
@@ -37,20 +39,34 @@ body,
 }
 body {
   padding-top: 50px;
+  background: #f6f6f6;
 }
 /* Scene editor */
 #main .scenes {
-  position: absolute;
+  /* Disabled for demo */
+  /* position: absolute; */
   margin-top: 0;
   margin-left: 0;
   height: 100%;
   width: 100%;
   z-index: 2;
   padding: 2em;
-  background: #afafaf;
+  background: rgba(175, 175, 175, 0.5);
+  box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+/* Removed bootstraps gutter */
+#info,
+#list {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+nav,
+.scene-panel {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 .scenes-overlay {
-  position: absolute;
+  /* Disabled for demo */
+  /* position: absolute; */
   margin-top: 0;
   margin-left: 0;
   height: 100%;
