--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -18,7 +18,8 @@ a.list-group-item.active:hover {
 }
 
 .absolute {
-	position: absolute;
+	/* Disabled for demo */
+	/* position: absolute; */
 	margin-top: 0;
 	margin-left: 0;
 	height: 100%;
@@ -32,12 +33,17 @@ a.list-group-item.active:hover {
 	}
 }
 
+/* Full height editor */
+
 html, body, .full-height {
 	height: 100%;
 	overflow: scroll;
 }
 
-body { padding-top: 50px; }
+body {
+	padding-top: 50px;
+	background: #f6f6f6;
+}
 
 /* Scene editor */
 
@@ -45,7 +51,18 @@ body { padding-top: 50px; }
 	.absolute;
 	z-index: 2;
 	padding: 2em;
-	background: #afafaf;
+	background: rgba(175, 175, 175, 0.5);
+	box-shadow: inset 0px 0px 10px rgba(0,0,0,0.2);
+}
+
+/* Removed bootstraps gutter */
+#info, #list {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+nav, .scene-panel {
+	box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
 }
 
 .scenes-overlay {
