--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -35,7 +35,7 @@ html,
 body,
 .full-height {
   height: 100%;
-  overflow: scroll;
+  overflow: hidden;
 }
 body {
   padding-top: 50px;
@@ -59,6 +59,7 @@ body {
 #list {
   padding-right: 15px;
   padding-left: 15px;
+  overflow: auto;
 }
 nav,
 .scene-panel {
