--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -37,7 +37,7 @@ a.list-group-item.active:hover {
 
 html, body, .full-height {
 	height: 100%;
-	overflow: scroll;
+	overflow: hidden;
 }
 
 body {
@@ -59,6 +59,7 @@ body {
 #info, #list {
   padding-right: 15px;
   padding-left: 15px;
+  overflow: auto;
 }
 
 nav, .scene-panel {
