--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -10,6 +10,32 @@
 a {
   cursor: pointer;
 }
+/* Navbar */
+.game-nav li {
+  text-align: center;
+}
+@media (max-width: 880px) {
+  .nav-name {
+    display: none !important;
+  }
+}
+@media (min-width: 881px) and (max-width: 960px) {
+  .nav-name {
+    font-size: 80%;
+    display: block;
+  }
+  body {
+    padding-top: 70px !important;
+  }
+}
+@media (min-width: 961px) and (max-width: 1100px) {
+  .nav-name {
+    display: block;
+  }
+  body {
+    padding-top: 70px !important;
+  }
+}
 /* Active bootstrap list item as a button */
 a.list-group-item.active:hover {
   background-color: #3276b1;
