--- a/styles/bootstrap.css
+++ b/styles/bootstrap.css
@@ -1469,7 +1469,7 @@ th {
 }
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th {
-  background-color: #f5f5f5;
+  background-color: #e8e8e8;
 }
 table col[class*="col-"] {
   position: static;
