Location editor (minus sidebar!)

--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -19,6 +19,11 @@ a {
 .table-hover .active td {
   background: #d8d8d8 !important;
 }
+.scene-trigger,
+.scene-title,
+.game_objects .edit {
+  cursor: pointer;
+}
 /* Navbar */
 .aris-nav li {
   text-align: center;
@@ -100,6 +105,10 @@ nav,
 .scene-panel {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
+.scene-panel:hover .panel-heading {
+  color: #428bca;
+  background: #f0f0f0;
+}
 .scenes-overlay {
   /* Disabled for demo */
   /* position: absolute; */
@@ -140,6 +149,9 @@ nav,
   overflow: hidden;
   text-align: center;
   white-space: nowrap;
+}
+.scene-triggers .scene-trigger:hover {
+  color: #428bca;
 }
 .new-scene-button {
   float: right;
