--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -10,10 +10,7 @@
 a {
   cursor: pointer;
 }
-.qr_image img {
-  padding-top: 1em;
-  width: 100%;
-}
+/* Left Organizer */
 .organizer-section-header {
   color: #777;
 }
@@ -79,7 +76,7 @@ a.list-group-item.active:hover {
   height: 40px;
   margin: 5px 10px;
 }
-/* Full height editor */
+/* Full height editing */
 html,
 body,
 .full-height {
@@ -103,7 +100,7 @@ body {
   background: rgba(175, 175, 175, 0.5);
   box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
-/* Removed bootstraps gutter */
+/* Remove bootstraps gutter */
 #info,
 #list {
   padding-right: 15px;
@@ -166,6 +163,7 @@ nav,
   float: right;
   z-index: 2;
 }
+/* Side editor */
 /* Hidden ID on editor heading */
 .object-id {
   visibility: hidden;
@@ -177,10 +175,24 @@ h4:hover .object-id {
 .trigger-types input {
   display: none;
 }
+/* QR code fit to side editor */
+.qr_image img {
+  padding-top: 1em;
+  width: 100%;
+}
 /* Narrow editor panels */
 .shrink-center {
   width: 430px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 2em;
+}
+/* Media Editor */
+.aris-media-thumbnail {
+  float: left;
+  width: 23%;
+  margin: 1%;
+}
+.aris-media-thumbnail p {
+  overflow: hidden;
 }
