--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -220,6 +220,11 @@ h4:hover .object-id {
 
 /* Media Editor */
 
+.media-editor {
+	height: 100%;
+	overflow-x: auto;
+}
+
 .aris-media-thumbnail {
 	float: left;
 	width: 23%;
