--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -188,6 +188,10 @@ h4:hover .object-id {
   margin-top: 2em;
 }
 /* Media Editor */
+.media-editor {
+  height: 100%;
+  overflow-x: auto;
+}
 .aris-media-thumbnail {
   float: left;
   width: 23%;
