Media uploads and media drag/drop!

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -233,3 +233,11 @@ h4:hover .object-id {
 		overflow: hidden;
 	}
 }
+
+.upload-preview {
+	width: 100%;
+}
+
+.media-drop-target.media-hover {
+	background: #999;
+}
