--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -200,3 +200,9 @@ h4:hover .object-id {
 .aris-media-thumbnail p {
   overflow: hidden;
 }
+.upload-preview {
+  width: 100%;
+}
+.media-drop-target.media-hover {
+  background: #999;
+}
