--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -193,15 +193,39 @@ h4:hover .object-id {
   overflow-x: auto;
 }
 .aris-media-thumbnail {
-  float: left;
-  width: 23%;
-  margin: 1%;
+  display: inline-block;
+  position: relative;
+  width: 25%;
+  padding: 1em;
+  padding-bottom: 30%;
+  margin-bottom: 1em;
+  height: 0;
+}
+.aris-media-thumbnail .media-thumbnail {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+}
+.aris-media-thumbnail .caption {
+  display: inline-block;
+  position: relative;
 }
 .aris-media-thumbnail p {
   overflow: hidden;
 }
-.upload-preview {
+.aris-media-thumbnail div.image {
   width: 100%;
+  height: 100%;
+  position: absolute;
+  background-size: contain !important;
+  background-repeat: no-repeat !important;
+  background-position: center center !important;
+}
+.upload-preview {
+  max-width: 100%;
+  max-height: 45%;
 }
 .media-drop-target.media-hover {
   background: #999;
