--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -192,7 +192,7 @@ h4:hover .object-id {
   height: 100%;
   overflow-x: auto;
 }
-.aris-media-thumbnail {
+.media-editor .aris-media-thumbnail {
   display: inline-block;
   position: relative;
   width: 25%;
@@ -201,21 +201,21 @@ h4:hover .object-id {
   margin-bottom: 1em;
   height: 0;
 }
-.aris-media-thumbnail .media-thumbnail {
+.media-editor .aris-media-thumbnail .media-thumbnail {
   display: inline-block;
   position: relative;
   width: 100%;
   height: 0;
   padding-bottom: 100%;
 }
-.aris-media-thumbnail .caption {
+.media-editor .aris-media-thumbnail .caption {
   display: inline-block;
   position: relative;
 }
-.aris-media-thumbnail p {
+.media-editor .aris-media-thumbnail p {
   overflow: hidden;
 }
-.aris-media-thumbnail div.image {
+.media-editor .aris-media-thumbnail div.image {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -229,4 +229,23 @@ h4:hover .object-id {
 }
 .media-drop-target.media-hover {
   background: #999;
+}
+/* Media Selector */
+.icon-chooser .chooser-thumbnail {
+  display: inline-block;
+}
+.icon-chooser .choose {
+  border: 2px solid rgba(0, 0, 0, 0);
+  border-radius: 5px;
+  margin: 5px;
+}
+.icon-chooser .choose img {
+  border-radius: 5px;
+}
+.icon-chooser .choose:hover {
+  border: 2px solid #999;
+}
+.icon-chooser .choose:hover img {
+  opacity: 0.5;
+  cursor: pointer;
 }
