--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -270,7 +270,11 @@ h4:hover .object-id {
 
 /* Media Selector */
 
-.icon-chooser {
+.media-chooser {
+	max-height: 200px;
+	overflow-x: hidden;
+	overflow-y: scroll;
+
 	.chooser-thumbnail {
 		display: inline-block;
 	}
