--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -196,7 +196,7 @@ h4:hover .object-id {
 
 /* Hide radio inputs */
 
-.trigger-types input {
+.trigger-types input, .item-types input {
 	display: none;
 }
 
