Multiple radio selectors in same view fix, add hidden/enter fields for trigger

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -196,7 +196,7 @@ h4:hover .object-id {
 
 /* Hide radio inputs */
 
-.trigger-types input, .item-types input {
+.trigger-types input, .item-types input, .trigger-trigger_on_enter input {
 	display: none;
 }
 
