--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -173,7 +173,8 @@ h4:hover .object-id {
 }
 /* Hide radio inputs */
 .trigger-types input,
-.item-types input {
+.item-types input,
+.trigger-trigger_on_enter input {
   display: none;
 }
 /* QR code fit to side editor */
