Event editor for Plaques

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -294,3 +294,11 @@ h4:hover .object-id {
 		}
 	}
 }
+
+/* Event Editor */
+.events-editor {
+	.padded, .event-table-header div, .event-table-header label {
+		padding-right: 15px;
+		padding-left: 15px;
+	}
+}
