--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -256,3 +256,10 @@ h4:hover .object-id {
   opacity: 0.5;
   cursor: pointer;
 }
+/* Event Editor */
+.events-editor .padded,
+.events-editor .event-table-header div,
+.events-editor .event-table-header label {
+  padding-right: 15px;
+  padding-left: 15px;
+}
