--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -296,7 +296,7 @@ h4:hover .object-id {
 }
 
 /* Event Editor */
-.events-editor {
+.events-editor, .quest-editor  {
 	.padded, .event-table-header div, .event-table-header label {
 		padding-right: 15px;
 		padding-left: 15px;
