--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -291,3 +291,7 @@ h4:hover .object-id {
   padding-right: 5px;
   padding-left: 5px;
 }
+/* Requirements Editor */
+.and-package-editor .list-group {
+  margin-bottom: 10px;
+}
