--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -321,3 +321,8 @@ h4:hover .object-id {
 		padding-left: 5px;
 	}
 }
+
+/* Requirements Editor */
+.and-package-editor .list-group {
+	margin-bottom: 10px;
+}
