--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -323,6 +323,8 @@ h4:hover .object-id {
 }
 
 /* Requirements Editor */
-.and-package-editor .list-group {
-	margin-bottom: 10px;
+.games-list,.and-package-editor {
+	.list-group {
+		margin-bottom: 10px;
+	}
 }
