Friendlier media chooser when empty. Restyle lock buttons and media so they don't blend together

--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -262,6 +262,9 @@ h4:hover .object-id {
   opacity: 0.5;
   cursor: pointer;
 }
+.thumbnail {
+  cursor: pointer;
+}
 .thumbnail img {
   border-radius: 3px;
 }
