Empty name on media organizer replaced with filename, friendlier css to bootstrap

--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -18,7 +18,7 @@ a {
   padding-left: 1em !important;
 }
 .table-hover .active td {
-  background: #d8d8d8 !important;
+  /*background: #d8d8d8 !important;*/
 }
 .scene-trigger,
 .scene-title,
