--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -17,7 +17,7 @@ a {
 }
 
 .table-hover .active td {
-	background: #d8d8d8 !important;
+	/*background: #d8d8d8 !important;*/
 }
 
 .scene-trigger, .scene-title, .game_objects .edit {
