--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -221,9 +221,6 @@ h4:hover .object-id {
 /* Media Editor */
 
 .media-editor {
-	height: 100%;
-	overflow-x: auto;
-
 	.thumbnail .caption {
 		p, div, h4 {
 			overflow: hidden;
@@ -331,4 +328,10 @@ h4:hover .object-id {
 	.list-group {
 		margin-bottom: 10px;
 	}
+}
+
+/* Scrolling for tall areas */
+.scenes, .media-editor, .quests-editor, .conversations-editor {
+	height: 100%;
+	overflow-x: auto;
 }
