--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -263,6 +263,8 @@ h4:hover .object-id {
 }
 .thumbnail img {
   border-radius: 3px;
+  height: 128px;
+  width: 128px;
 }
 .thumbnail:hover {
   background: #eee;
