--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -332,3 +332,9 @@ h4:hover .object-id {
 		margin-bottom: 10px;
 	}
 }
+
+/* Scrolling for tall areas */
+.scenes, .media-editor, .quests-editor, .conversations-editor {
+	height: 100%;
+	overflow-x: auto;
+}
