--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -334,7 +334,7 @@ h4:hover .object-id {
 }
 
 /* Scrolling for tall areas */
-.scenes, .media-editor, .quests-editor, .conversations-editor {
+.scenes, .media-editor, .quests-editor, .conversations-editor, .games-list-container  {
 	height: 100%;
 	overflow-x: auto;
 }
