Hide large filenames in media editor

--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -25,6 +25,10 @@ a {
 .game_objects .edit {
   cursor: pointer;
 }
+/* Long unbreakable names */
+.media-organizer {
+  overflow-x: hidden;
+}
 /* Navbar */
 .aris-nav li {
   text-align: center;
