--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -29,6 +29,13 @@ a {
 }
 
 
+/* Long unbreakable names */
+
+.media-organizer {
+	overflow-x: hidden;
+}
+
+
 /* Navbar */
 .aris-nav li {
 	text-align: center;
