--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -135,7 +135,7 @@ nav, .scene-panel, .script-panel, .script-option-panel, .media-editor .thumbnail
 
 /* Shaded Backgrounds */
 
-#main .scenes, .media-editor, .intro_script {
+#main .scenes, .media-editor, .conversation-editor {
 	background: rgba(175, 175, 175, 0.5);
 	box-shadow: inset 0px 0px 10px rgba(0,0,0,0.2);
 }
@@ -284,8 +284,12 @@ h4:hover .object-id {
 	max-height: 45%;
 }
 
+.media-editor .media-drop-target {
+	padding: 2em 1em;
+}
+
 .media-drop-target.media-hover {
-	background: #999;
+	background: rgba(0,0,0,0.25);
 }
 
 
@@ -350,17 +354,14 @@ h4:hover .object-id {
 }
 
 /* Scrolling for tall areas */
-.scenes, .media-editor, .quests-editor, .conversations-editor, .games-list-container  {
+.scenes, .media-editor, .media-editor .media-drop-target, .quests-editor, .conversation-editor, .conversations-editor, .games-list-container  {
 	height: 100%;
 	overflow-x: auto;
 }
 
 
 /* Conversation Editor */
-.intro_script {
-	overflow-x: auto;
-	height: 100%;
-
+.conversation-editor {
 	padding: 2em;
 	text-align: center;
 }
