--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -330,6 +330,10 @@ h4:hover .object-id {
   padding: 2em;
   text-align: center;
 }
+.conversation-editor,
+.conversation-editor .intro_script_region {
+  position: relative;
+}
 .script_options {
   white-space: nowrap;
 }
