--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -366,6 +366,10 @@ h4:hover .object-id {
 	text-align: center;
 }
 
+.conversation-editor, .conversation-editor .intro_script_region {
+	position: relative;
+}
+
 
 .script_options {
 	white-space: nowrap;
