--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -366,8 +366,13 @@ h4:hover .object-id {
 	text-align: center;
 }
 
-.conversation-editor, .conversation-editor .intro_script_region {
+/* Jquery pan/zoom */
+.conversation-editor, .conversation_pan_region {
 	position: relative;
+}
+
+.intro_script_region {
+	display: inline-block;
 }
 
 
