--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -24,8 +24,12 @@ a {
 	/*background: #d8d8d8 !important;*/
 }
 
-.scene-trigger, .scene-title, .game_objects .edit {
+.scene-trigger, .scene-title, .game_objects .edit, table td {
 	cursor: pointer;
+}
+
+table th {
+ cursor: default;
 }
 
 
