--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -218,7 +218,7 @@ h4:hover .object-id {
 
 /* Hide radio inputs */
 
-.trigger-types input, .item-types input, .trigger-trigger_on_enter input {
+.trigger-types input, .item-types input, .trigger-trigger_on_enter input, .factory-trigger_on_enter input {
 	display: none;
 }
 
