--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -393,3 +393,16 @@ h4:hover .object-id {
 		margin-left: 100px;
 	}
 }
+
+/* Modal spacing */
+
+.modal-dialog {
+	margin-top: 100px !important;
+}
+
+.aris-alert {
+	top: 25px;
+	position: absolute;
+	left: 50%;
+	z-index: 9000;
+}
