Conversation icon arrows, and hover for options and scripts

--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -335,6 +335,23 @@ h4:hover .object-id {
   padding: 2em;
   text-align: center;
 }
+.conversation-button,
+.script-option-panel,
+.script-panel {
+  cursor: pointer;
+}
+.script-option-panel:hover {
+  border: 1px solid rgba(0, 0, 0, 0.5);
+}
+.script-panel:hover {
+  border: 1px solid rgba(0, 0, 0, 0.5);
+}
+.conversation-button {
+  color: #333;
+}
+.conversation-button:hover {
+  color: #428bca;
+}
 /* Jquery pan/zoom */
 .conversation-editor,
 .conversation_pan_region {
