--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -370,6 +370,27 @@ h4:hover .object-id {
 	text-align: center;
 }
 
+.conversation-button, .script-option-panel, .script-panel {
+	cursor: pointer;
+}
+
+.script-option-panel:hover {
+	border: 1px solid rgba(0,0,0, 0.5);
+}
+
+.script-panel:hover {
+	border: 1px solid rgba(0,0,0, 0.5);
+}
+
+// FIXME use bootstrap buttons
+.conversation-button {
+	color: #333;
+}
+
+.conversation-button:hover {
+	color: #428bca;
+}
+
 /* Jquery pan/zoom */
 .conversation-editor, .conversation_pan_region {
 	position: relative;
